--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 alembic==1.7.5
+APScheduler==3.8.1
 backcall==0.2.0
 click==8.0.3
-colorama==0.4.4
 decorator==5.1.0
 environs==9.3.5
 Flask==2.0.2
@@ -20,12 +20,9 @@ Mako==1.1.6
 MarkupSafe==2.0.1
 marshmallow==3.14.1
 matplotlib-inline==0.1.3
-mypy-extensions==0.4.3
 parso==0.8.2
-pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
-platformdirs==2.4.0
 prompt-toolkit==3.0.22
 psycopg2-binary==2.9.2
 ptyprocess==0.7.0
@@ -33,10 +30,11 @@ Pygments==2.10.0
 PyJWT==2.3.0
 python-dotenv==0.19.2
 pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
 six==1.16.0
 SQLAlchemy==1.4.27
-tomli==1.2.2
 traitlets==5.1.1
-typing_extensions==4.0.1
+tzdata==2021.5
+tzlocal==4.1
 wcwidth==0.2.5
 Werkzeug==2.0.2
