--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 FLASK_ENV=development
 SQLALCHEMY_DATABASE_URI="postgresql://usuario:password@localhost:5432/database"
 JWT_SECRET_KEY="secret_key"
+EMAIL_USERNAME="user_email"
+EMAIL_PASSWORD="user_password"
